--- a/templates/_fulcrum-premium-finance/_singles/_homepage.twig
+++ b/templates/_fulcrum-premium-finance/_singles/_homepage.twig
@@ -326,7 +326,7 @@
 
         <!-- Client logo Carousel -->
         <div class="container">
-            <section class="customer-logos slider">
+            <section class="customer-logos autoplay">
                 <div class="slide"><img src="/web/assets/general/homepage/client-slider-logos/Client-icon-1-grey.svg"></div>
                 <div class="slide"><img src="/web/assets/general/homepage/client-slider-logos/Client-icon-2-grey.svg"></div>
                 <div class="slide"><img src="/web/assets/general/homepage/client-slider-logos/Client-icon-3-grey.svg"></div>
