--- a/templates/_fulcrum-premium-finance/_includes/_landingpage-footer.twig
+++ b/templates/_fulcrum-premium-finance/_includes/_landingpage-footer.twig
@@ -1,28 +1,28 @@
 <!-- Landing page FOOTER -->
-<div id="landingpage-footer" class="animate__animated animate__slideInLeft">
-    <div id="landingpage-footer-section" class="section-grad ">
+<div id="landingpage-footer">
+    <div id="landingpage-footer-section" class="section-grad">
         <div class="row">
-            <div class="landingpage-footer-container animate__delay-1s">
+            <div class="landingpage-footer-container" data-aos="zoom-in" data-aos-duration="2000">
                 
                 <!-- LP footer left-side LOGO -->
                 <div class="left-lp-footer-col">
-                    <a class="lp-footer-logo animate__animated animate__zoomIn animate__delay-1s" href=""><img src="/web/assets/general/misc/Fulcrum_Premium_Finance-White_logo.svg" /></a>
-                    <p class="lp-footer-text animate__animated animate__zoomIn animate__delay-1s">© FULCRUM PREMIUM FINANCE 2020. All rights reserved.</p>
+                    <a data-aos="zoom-in" data-aos-duration="2000" class="lp-footer-logo" href=""><img src="/web/assets/general/misc/Fulcrum_Premium_Finance-White_logo.svg" /></a>
+                    <p data-aos="zoom-in" data-aos-duration="2000" class="lp-footer-text">© FULCRUM PREMIUM FINANCE 2020. All rights reserved.</p>
                 </div>
 
                 <!-- LP footer right-side SOCIAL MEDIA ICONS -->
-                <div class="right-lp-footer-col animate__animated animate__zoomIn animate__delay-1s">
+                <div data-aos="zoom-in" data-aos-duration="2000" class="right-lp-footer-col">
 
                     <div class="right-lp-footer-col-heading-container">
-                        <p class="follow-us animate__animated animate__zoomIn animate__delay-1s">FOLLOW US</p>
+                        <p data-aos="zoom-in" data-aos-duration="2000" class="follow-us">FOLLOW US</p>
                     </div>
 
                     <div class="footer-social-media-icons-container">
-                        <a id="footer-instagram" class="footer-social-icon animate__animated animate__zoomIn"><img src="/web/assets/general/misc/social_media_icons/instagram_icon.svg"></a>
-                        <a id="footer-facebook" class="footer-social-icon animate__animated animate__zoomIn"><img src="/web/assets/general/misc/social_media_icons/facebook_icon.svg"></a>
-                        <a id="footer-twitter" class="footer-social-icon animate__animated animate__zoomIn"><img src="/web/assets/general/misc/social_media_icons/twitter_icon.svg"></a>
-                        <a id="footer-youtube" class="footer-social-icon animate__animated animate__zoomIn"><img src="/web/assets/general/misc/social_media_icons/youtube_icon.svg"></a>
-                        <a id="footer-linkedin" class="footer-social-icon animate__animated animate__zoomIn"><img src="/web/assets/general/misc/social_media_icons/linkedin_icon.svg"></a>
+                        <a id="footer-instagram" data-aos="zoom-in" data-aos-duration="2000" class="footer-social-icon"><img src="/web/assets/general/misc/social_media_icons/instagram_icon.svg"></a>
+                        <a id="footer-facebook" data-aos="zoom-in" data-aos-duration="2000" class="footer-social-icon"><img src="/web/assets/general/misc/social_media_icons/facebook_icon.svg"></a>
+                        <a id="footer-twitter" data-aos="zoom-in" data-aos-duration="2000" class="footer-social-icon"><img src="/web/assets/general/misc/social_media_icons/twitter_icon.svg"></a>
+                        <a id="footer-youtube" data-aos="zoom-in" data-aos-duration="2000" class="footer-social-icon"><img src="/web/assets/general/misc/social_media_icons/youtube_icon.svg"></a>
+                        <a id="footer-linkedin" data-aos="zoom-in" data-aos-duration="2000" class="footer-social-icon"><img src="/web/assets/general/misc/social_media_icons/linkedin_icon.svg"></a>
                     </div>
 
                 </div>
