--- a/templates/_fulcrum-premium-finance/_landingpages/_insured-landingpage.twig
+++ b/templates/_fulcrum-premium-finance/_landingpages/_insured-landingpage.twig
@@ -191,11 +191,11 @@
             
                 <!-- FINAL PITCH TEXT -->
                 <div class="how-add-it-up-text-container">
-                    <h2 data-aos="zoom-in" data-aos-once="true" data-aos-duration="2000" class="how-add-it-up-heading">How we add it all up</h2>  
+                    <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="2000" class="how-add-it-up-heading">How we add it all up</h2>  
                 </div>
 
 
-                <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="2000" class="how-we-add-it-up_cal_container">
+                <div data-aos="fade-up" data-aos-once="true" data-aos-duration="2000" class="how-we-add-it-up_cal_container">
                     <div class="how-we-add-it-up-table">
                         <table class="how-we-add-it-up_cal_container">
                             <tr class="how-we-add-it-heading-row">
